notify listener refactor